# bathdiff

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  one_click.py  pyproject.toml  requirements.txt
configs/: default.yaml
examples/: example_usage.py
kaggle_tpu/: run_bathymetry_tpu.py
scripts/: run_bathymetry.py
src/bathdiff/: __init__.py  calibrate.py  config.py  data_io.py  diffusion.py  infer.py  models.py  pipeline.py  tin.py  train.py
tests/: test_pipeline.py
